# OpenVR-SpaceOverride

./: CMakeLists.txt  Protocol.h  README.md  Version.h
.github/workflows/: build.yml
OpenVR-SpaceCalibrator/: Calibration.cpp  Calibration.h  Configuration.cpp  OpenVR-SpaceCalibrator.cpp  OpenVR-SpaceCalibrator.vcxproj  OpenVR-SpaceCalibrator.vcxproj.filters  UserInterface.cpp
OpenVR-SpaceCalibratorDriver/: IPCServer.cpp  OpenVR-SpaceCalibratorDriver.vcxproj  ServerTrackedDeviceProvider.cpp  ServerTrackedDeviceProvider.h
driver/: driver.vrdrivermanifest
driver/resources/settings/: default.vrsettings
include/driver/: Hooking.h  IPCServer.h  InterfaceHookInjector.h  Logging.h  Main.h  OneEuroFilter.h  ServerTrackedDeviceProvider.h
include/overlay/: Calibration.h  Configuration.h  EmbeddedFiles.h  IPCClient.h  ImGuiWindow.h  UserInterface.h  VulkanRenderer.h  VulkanUtils.h
include/shared/: Protocol.h  Version.h  VrOverlay.h  VrUtils.h
install/: installer.nsi
lib/MinHook/lib/: libMinHook-x64-v141-md.lib
lib/imgui/: imgui_impl_openvr.cpp  imgui_impl_openvr.h
src/driver/: Hooking.cpp  IPCServer.cpp  InterfaceHookInjector.cpp  Logging.cpp  Main.cpp  ServerTrackedDeviceProvider.cpp
src/overlay/: Calibration.cpp  Configuration.cpp  EmbeddedFiles.cpp  IPCClient.cpp  ImGuiWindow.cpp  Main.cpp  UserInterface.cpp  VulkanRenderer.cpp
